--- a/package.json
+++ b/package.json
@@ -10,19 +10,39 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.1",
+        "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.1",
+        "@tanstack/react-query": "^5.51.18",
+        "@tanstack/react-query-devtools": "^5.51.18",
+        "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
+        "embla-carousel-autoplay": "^8.1.8",
+        "embla-carousel-react": "^8.1.8",
+        "input-otp": "^1.2.4",
         "lucide-react": "^0.417.0",
         "react": "^18.3.1",
+        "react-day-picker": "8.10.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.52.1",
+        "react-icons": "^5.2.1",
+        "react-router-dom": "^6.25.1",
         "tailwind-merge": "^2.4.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8",
+        "zustand": "^4.5.4"
     },
     "devDependencies": {
         "@types/node": "^22.0.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/react-icons": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^7.15.0",
         "@typescript-eslint/parser": "^7.15.0",
         "@vitejs/plugin-react": "^4.3.1",
