--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-checkbox": "^1.1.1",
+        "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-hover-card": "^1.1.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-popover": "^1.1.1",
         "@radix-ui/react-select": "^2.1.1",
@@ -30,9 +33,11 @@
         "react": "^18.3.1",
         "react-day-picker": "8.10.1",
         "react-dom": "^18.3.1",
+        "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.52.1",
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.25.1",
+        "sonner": "^1.5.0",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8",
