--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
+        "@omit/react-fancy-switch": "^0.1.0",
+        "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-hover-card": "^1.1.1",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-popover": "^1.1.1",
+        "@radix-ui/react-scroll-area": "^1.1.0",
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-toast": "^1.2.1",
+        "@radix-ui/react-toggle": "^1.1.0",
         "@tanstack/react-query": "^5.51.18",
         "@tanstack/react-query-devtools": "^5.51.18",
         "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "cmdk": "1.0.0",
         "date-fns": "^3.6.0",
         "embla-carousel-autoplay": "^8.1.8",
         "embla-carousel-react": "^8.1.8",
@@ -36,6 +41,7 @@
         "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.52.1",
         "react-icons": "^5.2.1",
+        "react-phone-number-input": "^3.4.5",
         "react-router-dom": "^6.25.1",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.4.0",
