--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VITE_API_URL=<api_url>
-VITE_THUMBS_URL=<thumb_url>
+VITE_API_URL=<nestjs_api_url>/api/v1
+VITE_THUMBS_URL=<nestjs_api_url>/thumbnails
