--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "date-fns": "^3.6.0",
         "embla-carousel-autoplay": "^8.1.8",
         "embla-carousel-react": "^8.1.8",
+        "i18next": "^23.14.0",
+        "i18next-browser-languagedetector": "^8.0.0",
         "input-otp": "^1.2.4",
         "lucide-react": "^0.417.0",
         "react": "^18.3.1",
@@ -42,6 +44,7 @@
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.52.1",
+        "react-i18next": "^15.0.1",
         "react-icons": "^5.2.1",
         "react-phone-number-input": "^3.4.5",
         "react-router-dom": "^6.25.1",
@@ -52,9 +55,11 @@
         "zustand": "^4.5.4"
     },
     "devDependencies": {
+        "@types/i18next": "^13.0.0",
         "@types/node": "^22.0.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/react-i18next": "^8.1.0",
         "@types/react-icons": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^7.15.0",
         "@typescript-eslint/parser": "^7.15.0",
